UPD: files structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   bot: 
     image: alexeymrvz/lobsterbot
     container_name: "lobsterbot"
-    command: sh -c "cd bot && python3 bot.py"
+    command: sh -c "PYTHONPATH='.' python3 bot/bot.py"
     env_file:
       - ./creds/credentials.env
+    volumes:
+     - ./data:/data
